<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">


    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/line_chart"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:background="@color/white" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back" />

    <TextView
        android:id="@+id/textView_file_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:text="@string/file_name" />

    <TextView
        android:id="@+id/textView_exp_time"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/exp_time"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView_activity_type"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/activity_type"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView_actual_steps"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/actual_steps"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView_estimated_steps"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/estimated_number_of_steps"
        android:textSize="20sp" />


</LinearLayout>